Finished landscape view

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
+  <script src="compiled-script.js" defer>
+  </script>
 
   <title>Frontend Mentor | Article preview component</title>
 
@@ -55,7 +57,7 @@
                 <img class="icon" src="images/icon-pinterest.svg" alt="pinterest icon" />
               </div>
             </div>
-            <div id="arrow">
+            <div id="down-arrow">
 
             </div>
           </div>
