Added the missing alt attribute to the portrait image elements.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </span>
       </div> 
       <div id="profile-content">
-        <img id="portrait" src="images/avatar-michelle.jpg" />
+        <img id="portrait" src="images/avatar-michelle.jpg" alt="photo of a person named michelle" />
         <div id="profile-text">
           <span id="name">
             Michelle Appleton
@@ -78,7 +78,7 @@
     </div>
     <div id="footer">
       <div id="mobile-profile-content">
-        <img id="mobile-portrait" src="images/avatar-michelle.jpg" />
+        <img id="mobile-portrait" src="images/avatar-michelle.jpg" alt="photo of a person named michelle" />
         <div id="mobile-profile-text">
           <span id="mobile-name">
             Michelle Appleton
